test/sema/builtin_print_fn_name_collision.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
fn main(): unit {}

// CHECK: [[# @LINE + 1 ]]:1: error: redeclaration of 'println'
fn println(x: number): number {
    return 0.0;
}
